digiKam 7.3.0 - Release date: 2021-xx-xx

*****************************************************************************************************
NEW FEATURES:

General : Digital Scanner plugin is now available under Windows.
General : Use Exiv2 0.27.4 in all bundles with Base Media File metadata support.
General : Use KF5 framework 5.80 and KAPP 20.12.3 in all bundles.
Searches: Find duplicates items is now process in parallel using multi-cores.

*****************************************************************************************************
BUGFIXES:

001 ==> 434750 - Yolov3 doesn't work on png Images.
002 ==> 434795 - Advanced search seems to notice internal tags.
003 ==> 356065 - Baloo metadata not written out by Album.
004 ==> 433226 - Crash - searching new entries.
005 ==> 435021 - Rename does not support both comma and semicolon.
006 ==> 435020 - Check for new version doesn't find updated released version.
007 ==> 435065 - After upgrade from digiKam 7.1 to 7.2, digiKam won't start.
008 ==> 434960 - Libksane impossible to cross-compile for Windows.
009 ==> 417064 - Import menu has no option to acquire images from scanner.
010 ==> 194341 - digiKam crashed with seg fault.
011 ==> 140750 - Image malformed in digiKam.
012 ==> 205140 - digiKam crash using digital scanner.
013 ==> 205198 - digiKam crash when trying to save a scanned image.
014 ==> 435089 - Tags Manager toolbar icon buttons do nothing.
015 ==> 435091 - Right-clicking Tags Manager toolbar shows unlabeled checkbox; unclear how to restore toolbar.
016 ==> 435139 - Error while opening the database. digikam will try to automatically reconnect to the database.
017 ==> 372435 - Use multiple cpu cores for duplicate search [patch].
018 ==> 383563 - Many tags disappeared from mariadb database.
019 ==> 424618 - When clicking on maps digiKam crash.
020 ==> 